tests/templatetest/foo/bar/A.java
package foo.bar;

import edu.ucr.cs.riple.taint.ucrtainting.qual.*;

public class A implements I {

  //    // :: error: override.return
  //    public String foo(){
  //        return "A";
  //    }
}
